# zero2prod

./: Cargo.toml  Dockerfile  README.md  notes.txt  spec.yaml  sqlx-data.json
.cargo/: config.toml
configuration/: base.yaml  production.yaml
migrations/: 20230416042058_create_subscriptions_table.sql  20230703042509_add_status_to_subscriptions.sql  20230703053904_make_status_not_null_in_subscriptions.sql  20231028000746_seed_user.sql  20231029060133_create_idempotency_table.sql  20231029225012_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  error.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
