[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = {version = "0.6.12", features = ["query"]}
hyper = "0.14.25"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.4.0", features = ["cors"]}

[dev-dependencies]
reqwest = "0.11.16"

# Automatically compile on code changes with:
# cargo watch -x check -x test -x run

# Calcualte test code coverage with:
# cargo tarpaulin --ignore-tests

# Check code patterns with:
# cargo clippy -- -D warnings

# Check formatting with:
# cargo fmt -- --check

# Check dependencies for vulnerabilities with:
# cargo audit
