[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = {version = "0.6.12", features = ["query"]}
axum-macros = "0.3.7"
chrono = {version = "0.4.24", defaulte-features = false, features = ["clock"]}
config = "0.13.3"
hyper = "0.14.25"
once_cell = "1.17.1"
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.160", features = ["derive"]}
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
# tower-http = {version = "0.4.0", features = ["cors", "trace"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter"]}
uuid = {version = "1.3.1", features = ["v4"]}

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.11.16"

# Automatically compile on code changes with:
# cargo watch -x check -x test -x run

# Calcualte test code coverage with:
# cargo tarpaulin --ignore-tests

# Check code patterns with:
# cargo clippy -- -D warnings

# Check formatting with:
# cargo fmt -- --check

# Check dependencies for vulnerabilities with:
# cargo audit

# Run tests with logs, requires "cargo install bunyan" first
# TEST_LOG=true cargo test health_check_works | bunyan
