[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.71"
argon2 = {version = "0.5.1", features = ["std"]}
axum = {version = "0.6.12", features = ["json", "query"]}
axum-macros = "0.3.7"
base64 = "0.21.2"
chrono = {version = "0.4.24", default-features = false, features = ["clock"]}
config = "0.13.3"
hyper = "0.14.25"
once_cell = "1.17.1"
rand = {version = "0.8.5", features = ["std_rng"]}
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.160", features = ["derive"]}
serde-aux = "4"
thiserror = "1.0.43"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["cors", "trace"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter"]}
unicode-segmentation = "1.10.1"
uuid = {version = "1.3.1", features = ["v4"]}
validator = "0.16.1"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.6.1"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.99"
wiremock = "0.5.19"

# Automatically compile on code changes with:
# cargo watch -x check -x test -x run

# Calcualte test code coverage with:
# cargo tarpaulin --ignore-tests

# Check code patterns with:
# cargo clippy -- -D warnings

# Check formatting with:
# cargo fmt -- --check

# Check dependencies for vulnerabilities with:
# cargo audit

# Run tests with logs, requires "cargo install bunyan" first
# TEST_LOG=true cargo test health_check_works | bunyan
